--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,8 +32,8 @@ jobs:
           server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
           settings-path: ${{ github.workspace }} # location for the settings.xml file
 
-      - name: Set version to ${{ inputs.version }}
-        run: mvn --batch-mode -e clean versions:set -DnewVersion=${{ github.events.inputs.version }} versions:commit
+      - name: Set version to ${{ github.event.inputs.version }}
+        run: mvn --batch-mode -e clean versions:set -DnewVersion=${{ github.event.inputs.version }} versions:commit
 
       - name: Build with Maven
         run: mvn -B package --file pom.xml
