--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.0</version>
+        <version>2.7.1</version>
     </parent>
 
     <groupId>be.gerard</groupId>
@@ -26,7 +26,7 @@
     <distributionManagement>
         <repository>
             <id>github</id>
-            <name>GitHub OWNE Apache Maven Packages</name>
+            <name>GitHub OWNER Apache Maven Packages</name>
             <url>https://maven.pkg.github.com/bartgerard/time</url>
         </repository>
     </distributionManagement>
@@ -36,6 +36,9 @@
 
         <maven-surefire-plugin.version>3.0.0-M6</maven-surefire-plugin.version>
         <gmavenplus-plugin.version>1.13.1</gmavenplus-plugin.version>
+
+        <groovy4.version>4.0.3</groovy4.version>
+        <spock.version>2.2-M1-groovy-4.0</spock.version>
     </properties>
 
     <dependencyManagement>
@@ -47,7 +50,7 @@
             <dependency>
                 <groupId>org.apache.groovy</groupId>
                 <artifactId>groovy-bom</artifactId>
-                <version>4.0.1</version>
+                <version>${groovy4.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -56,7 +59,7 @@
             <dependency>
                 <groupId>org.spockframework</groupId>
                 <artifactId>spock-bom</artifactId>
-                <version>2.2-M1-groovy-4.0</version>
+                <version>${spock.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -69,12 +72,6 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
         </dependency>
 
         <!-- testing -->
