--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.1</version>
+        <version>2.7.5</version>
     </parent>
 
     <groupId>be.gerard</groupId>
@@ -35,10 +35,10 @@
         <java.version>17</java.version>
 
         <maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
-        <gmavenplus-plugin.version>1.13.1</gmavenplus-plugin.version>
+        <gmavenplus-plugin.version>2.1.0</gmavenplus-plugin.version>
 
-        <groovy4.version>4.0.3</groovy4.version>
-        <spock.version>2.2-M1-groovy-4.0</spock.version>
+        <groovy4.version>4.0.6</groovy4.version>
+        <spock.version>2.3-groovy-4.0</spock.version>
     </properties>
 
     <dependencyManagement>
