--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
         <repository>
             <id>github</id>
             <name>GitHub OWNER Apache Maven Packages</name>
-            <url>https://maven.pkg.github.com/bartgerard/central</url>
+            <url>https://maven.pkg.github.com/bartgerard/time</url>
         </repository>
     </distributionManagement>
 
