--- a/pom.xml
+++ b/pom.xml
@@ -34,10 +34,10 @@
     <properties>
         <java.version>17</java.version>
 
-        <maven-surefire-plugin.version>3.0.0-M8</maven-surefire-plugin.version>
+        <maven-surefire-plugin.version>3.0.0</maven-surefire-plugin.version>
         <gmavenplus-plugin.version>2.1.0</gmavenplus-plugin.version>
 
-        <groovy4.version>4.0.8</groovy4.version>
+        <groovy4.version>4.0.10</groovy4.version>
         <spock.version>2.3-groovy-4.0</spock.version>
     </properties>
 
