--- a/pom.xml
+++ b/pom.xml
@@ -4,24 +4,17 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.4</version>
+        <groupId>be.gerard</groupId>
+        <artifactId>parent</artifactId>
+        <version>0.0.1</version>
+        <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <groupId>be.gerard</groupId>
     <artifactId>time</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
     <name>time</name>
     <description>time</description>
-
-    <developers>
-        <developer>
-            <id>bart.gerard</id>
-            <name>Bart Gerard</name>
-        </developer>
-    </developers>
 
     <distributionManagement>
         <repository>
@@ -30,106 +23,5 @@
             <url>https://maven.pkg.github.com/bartgerard/time</url>
         </repository>
     </distributionManagement>
-
-    <properties>
-        <java.version>17</java.version>
-
-        <maven-surefire-plugin.version>3.0.0</maven-surefire-plugin.version>
-        <gmavenplus-plugin.version>2.1.0</gmavenplus-plugin.version>
-
-        <groovy4.version>4.0.10</groovy4.version>
-        <spock.version>2.3-groovy-4.0</spock.version>
-    </properties>
-
-    <dependencyManagement>
-        <dependencies>
-
-            <!-- testing -->
-
-            <!-- groovy -->
-            <dependency>
-                <groupId>org.apache.groovy</groupId>
-                <artifactId>groovy-bom</artifactId>
-                <version>${groovy4.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-
-            <!-- spock -->
-            <dependency>
-                <groupId>org.spockframework</groupId>
-                <artifactId>spock-bom</artifactId>
-                <version>${spock.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-
-        </dependencies>
-    </dependencyManagement>
-
-    <dependencies>
-
-        <!-- utilities -->
-        <!-- apache -->
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-        </dependency>
-
-        <!-- testing -->
-        <!-- spring -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <!-- groovy -->
-        <dependency>
-            <groupId>org.apache.groovy</groupId>
-            <artifactId>groovy</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <!-- spock -->
-        <dependency>
-            <groupId>org.spockframework</groupId>
-            <artifactId>spock-core</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-    </dependencies>
-
-    <build>
-        <plugins>
-
-            <!-- gmaven -->
-            <plugin>
-                <groupId>org.codehaus.gmavenplus</groupId>
-                <artifactId>gmavenplus-plugin</artifactId>
-                <version>${gmavenplus-plugin.version}</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>compile</goal>
-                            <goal>compileTests</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <!-- surefire -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>${maven-surefire-plugin.version}</version>
-                <configuration>
-                    <includes>
-                        <include>**/*Specification.class</include>
-                        <include>**/*.Test.java</include>
-                    </includes>
-                </configuration>
-            </plugin>
-
-        </plugins>
-    </build>
 
 </project>
