--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,6 +41,8 @@ jobs:
 
       - name: Set version to ${{ github.event.inputs.version }}
         run: mvn --batch-mode -e clean versions:set -DnewVersion=${{ github.event.inputs.version }} versions:commit
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
 
       - name: Build with Maven
         run: mvn -B package --file pom.xml
