--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Set version to ${{ github.event.inputs.version }}
         run: mvn --batch-mode -e clean versions:set -DnewVersion=${{ github.event.inputs.version }} versions:commit
         env:
-          GITHUB_TOKEN_REF: ${{ secrets.GH_PAT_FOR_ACTIONS_TOKEN }}
+          GITHUB_TOKEN_REF: ${{ secrets.PRIVATE_GITHUB_TOKEN }}
 
       - name: Build with Maven
         run: mvn -B package --file pom.xml
